# ASEIA-ROS

./: .gitignore  .gitmodules  README.md  vrepSetup.sh
src/: CMakeLists.txt
src/aseia/: CMakeLists.txt  package.xml
src/aseia/include/: SensorEventPublisher.h  SensorEventSubscriber.h
src/aseia/msg/: EventType.msg  SensorEvent.msg
src/aseia/src/: coupler.cpp  examplePub.cpp  exampleSub.cpp
src/aseia_base/: CMakeLists.txt  package.xml
src/aseia_base/common/rqt/: debug.perspective
src/aseia_base/include/: AbstractPubSub.h  Channel.h  SensorEventPublisher.h  SensorEventSubscriber.h  Transformation.h  TransformationFactory.h
src/aseia_base/launch/: manager.launch
src/aseia_base/msg/: EventType.msg  ReceiveIndication.msg
src/aseia_base/src/: Channel.cpp  ScaleTransform.cpp  TransformationFactory.cpp  manager.cpp  manager_new.cpp
src/aseia_base/srv/: Publishers.srv
src/aseia_car_sim/: CMakeLists.txt  package.xml  rosHelpers.h  transformations.xml
src/aseia_car_sim/cfg/: Error.cfg  Nurbs.cfg
src/aseia_car_sim/common/network/: cgconfig.conf  cgconfig.sh  nft.rules  nft.sh  nftshow.sh  tc.filter  tc.qdisc  tc.sh  tcshow.sh  unnft.sh  untc.sh
src/aseia_car_sim/common/perf/: setup.sh
src/aseia_car_sim/common/rqt/: graphs.perspective
src/aseia_car_sim/common/rviz/: sim.rviz
src/aseia_car_sim/common/scenes/: basic.ttt  car.ttm
src/aseia_car_sim/common/shapes/: Hill2.blend  Hill2.mtl  Road2.mtl  RoadCurve.mtl  hill.blend  hill.mtl  road.mtl
src/aseia_car_sim/launch/: basic.launch  basic_car.launch  basic_car_debug.launch  basic_scenario.launch  car.launch  car_debug.launch  comm.launch  manager.launch  record.launch  scenario.launch  scneario.launch  sim.launch  ui.launch
src/aseia_car_sim/msg/: EventData.msg  Latency.msg
src/aseia_car_sim/scenes/: basic.ttt
src/aseia_car_sim/shapes/: hill.blend
src/aseia_car_sim/src/: Attributes.h  Bridge.cpp  Car.cpp  Car.h  Controller.cpp  Controller.h  Data.cpp  Data.h  DataException.cpp  DataException.h  Errors.cpp  Errors.h  Nurbs.cpp  Nurbs.h  Road.cpp  RoadTransformation.cpp  Simulation.cpp  Simulation.h  UTMToRoad.cpp  VRepWrapper.cpp  VRepWrapper.h  VirtACC.cpp  VirtACCKalman.cpp  VirtSpeed.cpp  commTest  extract.cpp  main.cpp  nurbsTest  perf.sh  rosHelpers.h
src/aseia_car_sim/srv/: UpdateCar.srv
src/aseia_examples/: CMakeLists.txt  package.xml
src/aseia_examples/common/: example.perspective
src/aseia_examples/include/: SensorEventPublisher.h  SensorEventSubscriber.h
src/aseia_examples/launch/: example.launch  viz.launch
src/aseia_examples/src/: anglePub.cpp  anglePub2.cpp  anglePub3.cpp  angleSub.cpp  coupler.cpp  diffFormatPub.cpp  distancePub.cpp  doorGridSub.cpp  examplePub.cpp  exampleSub.cpp  fittingPub.cpp  mapMerger.cpp  positionPub.cpp  robotSub.cpp
src/aseia_msgs/: CMakeLists.txt  package.xml
src/aseia_msgs/msg/: Channel.msg  Channels.msg
src/aseia_rqt/: CMakeLists.txt  channels.xml  package.xml  setup.py
src/aseia_rqt/common/: channels.ui
src/aseia_rqt/src/aseia_rqt/: channels.py
src/aseia_rqt_gui/: CMakeLists.txt  package.xml  plugin.xml
src/vrep/: CMakeLists.txt  package.xml
src/vrep/launch/: vrep.launch
src/vrep/src/: vrep
src/vrep/vrep_common/: CMakeLists.txt  package.xml
src/vrep/vrep_joy/: CMakeLists.txt  package.xml
src/vrep/vrep_plugin/: CMakeLists.txt  package.xml
src/vrep/vrep_plugin/include/: ROS_server.h  extApiCustomConst.h  v_repConst.h  v_repLib.h  v_repTypes.h  vrepSubscriber.h  vrep_plugin.h
src/vrep/vrep_plugin/src/: ROS_server.cpp  v_repLib.cpp  vrepSubscriber.cpp  vrep_plugin.cpp
