<?xml version="1.0"?>
<package format="2">
  <name>aseia_rqt</name>
  <version>0.1.0</version>
  <description>rqt visualization plugins for ASEIA</description>

  <maintainer email="steup@ivs.cs.ovgu.de">Christoph Steup</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_msg</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/channels.xml"/>
  </export>
</package>
