<?xml version="1.0"?>
<package>
  <name>vrep_common</name>
  <version>0.0.0</version>
  <description>Common message and service definitions of the VREP ROS Interface</description>
  <maintainer email="steup@ivs.cs.ovgu.de">Christoph Steup</maintainer>
  <license>BSD</license>
  <url type="website">http://www.coppeliarobotics.com</url>
  <author email="marc@coppeliarobotics.com">Dr. Marc Andreas Freese</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
</package>
