<?xml version="1.0"?>
<package>
  <name>vrep_joy</name>
  <version>0.0.0</version>
  <description>Joystic interface for VREP</description>
  <maintainer email="steup@ivs.cs.ovgu.de">Christoph Steup</maintainer>
  <license>BSD</license>
  <url type="website">http://www.coppeliarobotics.com</url>
  <author email="formica@member.fsf.org">Roberto Marino</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>sensor_msgs</build_depend>
</package>
